# mine

./: .gitignore  Android.mk  Android_static.mk  CMakeLists.txt  Makefile  README.md  todo  xmake.lua
resource/imgs/: sprites.info
src/: main.c  model.c  model.h  timer.c  timer.h
study/: README.md
study/lesson1/: CMakeLists.txt  lesson1.c
study/lesson2/: CMakeLists.txt  lesson2.c
study/lesson3/: CMakeLists.txt  Timer.c  Timer.h  lesson3.c
study/lesson4/: CMakeLists.txt  REAME.md
study/lesson4/src/: dot.c  dot.h  lesson4.c  setting.h  timer.c  timer.h  碰撞检测.md
test/: Makefile  test.c
